--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.android.support:cardview-v7:24.0.+'
+    compile 'com.android.support:recyclerview-v7:24.0.+'
     compile project(':library')
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.azimolabs.conditionwatcher:conditionwatcher:0.1'
@@ -47,4 +49,5 @@ dependencies {
     androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
     androidTestCompile 'org.mockito:mockito-core:1.10.17'
     androidTestCompile 'com.android.support:support-annotations:24.2.1'
+
 }
